--- a/angular-client/src/app/components/social-friends-list/social-friends-list.component.html
+++ b/angular-client/src/app/components/social-friends-list/social-friends-list.component.html
@@ -1,13 +1,27 @@
-<table
-  cdkDropList
-  (cdkDropListDropped)="dropFriend($event)"
-  mat-table
-  [dataSource]="friends"
-  class="mat-elevation-z0">
-  <ng-container matColumnDef="username">
-    <td mat-cell *matCellDef="let element; let i = index" cdkDrag>
-      <app-social-cell [friend]="friends.filteredData[i]"></app-social-cell>
-    </td>
-  </ng-container>
-  <tr mat-row *matRowDef="let row; columns: friendsDisplayedColumns"></tr>
-</table>
+<mat-expansion-panel class="mat-elevation-z0" [(expanded)]="panelOpenState">
+  <mat-expansion-panel-header>
+    <mat-panel-title>
+      <h1>
+        <span style="color: rgb(0, 162, 255)">friends</span>
+      </h1>
+    </mat-panel-title>
+    <mat-panel-description>
+      <app-notification-badge
+        *ngIf="unviewedMessagesCount > 0 && !panelOpenState"
+        [count]="unviewedMessagesCount"></app-notification-badge>
+    </mat-panel-description>
+  </mat-expansion-panel-header>
+  <table
+    cdkDropList
+    (cdkDropListDropped)="dropFriend($event)"
+    mat-table
+    [dataSource]="friends"
+    class="mat-elevation-z0">
+    <ng-container matColumnDef="username">
+      <td mat-cell *matCellDef="let element; let i = index" cdkDrag>
+        <app-social-cell [friend]="friends.filteredData[i]"></app-social-cell>
+      </td>
+    </ng-container>
+    <tr mat-row *matRowDef="let row; columns: friendsDisplayedColumns"></tr>
+  </table>
+</mat-expansion-panel>
