--- a/angular-client/src/app/components/social-friends-tab/social-friends-tab.component.html
+++ b/angular-client/src/app/components/social-friends-tab/social-friends-tab.component.html
@@ -1,30 +1,17 @@
 <div class="social-friends-tab">
+  <form>
+    <mat-form-field class="social-friends-full-width">
+      <mat-label>Search</mat-label>
+      <input matInput (keyup)="filter($event)" name="filter" />
+    </mat-form-field>
+  </form>
   <app-social-friend-requests-list
     title="friend requests"
     titleColor="color:aliceblue"
     [friendRequests]="inboundFriendRequests"></app-social-friend-requests-list>
-  <br />
+  <app-social-friends-list [friends]="friends"></app-social-friends-list>
   <app-social-friend-requests-list
     title="pending"
     titleColor="color:yellow"
     [friendRequests]="outboundFriendRequests"></app-social-friend-requests-list>
-  <mat-expansion-panel class="mat-elevation-z0" [expanded]="true">
-    <mat-expansion-panel-header>
-      <mat-panel-title>
-        <h1>
-          <span style="color: rgb(0, 162, 255)">friends</span>
-        </h1>
-      </mat-panel-title>
-    </mat-expansion-panel-header>
-    <form>
-      <mat-form-field class="social-friends-full-width">
-        <mat-label>Search</mat-label>
-        <input matInput (keyup)="filter($event)" name="filter" />
-      </mat-form-field>
-    </form>
-    <app-social-friends-list
-      title="friends"
-      titleColor="color: rgb(0, 162, 255)"
-      [friends]="friends"></app-social-friends-list>
-  </mat-expansion-panel>
 </div>
