Pass inputs down. Friends notis now combining unviewed messages and inbound friend requests

--- a/angular-client/src/app/components/social-friends-list/social-friends-list.component.html
+++ b/angular-client/src/app/components/social-friends-list/social-friends-list.component.html
@@ -7,8 +7,8 @@
     </mat-panel-title>
     <mat-panel-description>
       <app-notification-badge
-        *ngIf="unviewedMessagesCount > 0 && !panelOpenState"
-        [count]="unviewedMessagesCount"></app-notification-badge>
+        *ngIf="unviewedMessages?.length > 0 && !panelOpenState"
+        [count]="unviewedMessages?.length"></app-notification-badge>
     </mat-panel-description>
   </mat-expansion-panel-header>
   <table
