--- a/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
+++ b/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
@@ -18,20 +18,22 @@
       <mat-tab>
         <ng-template mat-tab-label>
           Friends
-          <app-notification-badge
-            *ngIf="unviewedMessagesCount > 0 && activeTabIndex !== 0"
-            [count]="unviewedMessagesCount"></app-notification-badge>
+          <ng-container *ngIf="combinedNotifications$ | async as combinedNotif">
+            <app-notification-badge
+              *ngIf="combinedNotif.hasData && activeTabIndex !== 0"
+              [count]="combinedNotif.count">
+            </app-notification-badge>
+          </ng-container>
         </ng-template>
-
-        <app-social-friends-tab></app-social-friends-tab>
+        <app-social-friends-tab
+          [friendsData]="friends$ | async"
+          [inboundFriendRequestsData]="inboundFriendRequests$ | async"
+          [outboundFriendRequestsData]="outboundFriendRequests$ | async"
+          [unviewedMessages]="unviewedMessages$ | async">
+        </app-social-friends-tab>
       </mat-tab>
       <mat-tab>
-        <ng-template mat-tab-label>
-          Groups
-          <app-notification-badge
-            *ngIf="unviewedMessagesCount > 0 && activeTabIndex !== 1"
-            [count]="unviewedMessagesCount"></app-notification-badge>
-        </ng-template>
+        <ng-template mat-tab-label> Groups </ng-template>
         <!-- <app-social-groups-tab> </app-social-groups-tab> -->
       </mat-tab>
     </mat-tab-group>
