--- a/angular-client/src/app/components/signup/signup.component.html
+++ b/angular-client/src/app/components/signup/signup.component.html
@@ -6,7 +6,10 @@
       <mat-card-subtitle>Wanna play a qwicki?</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
-      <form class="signup-form" (ngSubmit)="signup()">
+      <form
+        class="signup-form"
+        #signupForm="ngForm"
+        (ngSubmit)="signupForm.valid && signup()">
         <mat-form-field class="signup-full-width">
           <mat-label>First Name</mat-label>
           <input matInput [(ngModel)]="user.firstName" name="firstName" />
@@ -21,15 +24,25 @@
         </mat-form-field>
         <mat-form-field class="signup-full-width">
           <mat-label>Email</mat-label>
-          <input matInput [(ngModel)]="user.email" type="email" name="email" />
+          <input
+            required
+            matInput
+            [(ngModel)]="user.email"
+            type="email"
+            name="email" />
         </mat-form-field>
         <mat-form-field class="signup-full-width">
           <mat-label>username</mat-label>
-          <input matInput [(ngModel)]="user.username" name="username" />
+          <input
+            required
+            matInput
+            [(ngModel)]="user.username"
+            name="username" />
         </mat-form-field>
         <mat-form-field class="signup-full-width">
           <mat-label>password</mat-label>
           <input
+            required
             matInput
             [(ngModel)]="user.password"
             type="password"
