--- a/angular-client/src/app/components/social-cell/social-cell.component.html
+++ b/angular-client/src/app/components/social-cell/social-cell.component.html
@@ -7,7 +7,7 @@
   [bPadding]="panelOpenState ? 5 : 0">
   <mat-expansion-panel-header>
     <mat-panel-title
-      [style]="panelOpenState ? 'color:#673ab7' : 'color:aliceblue'">
+      [style]="panelOpenState ? 'color:#7b1fa2' : 'color:aliceblue'">
       <span
         [matTooltip]="friend.online ? 'online' : 'offline'"
         class="material-icons"
