--- a/angular-client/src/app/components/social-sidenav/social-sidenav.component.css
+++ b/angular-client/src/app/components/social-sidenav/social-sidenav.component.css
@@ -1,42 +1,48 @@
-.example-sidenav {
-  width: 350px;
-  padding: 20px;
+/* Global Styles */
+.sidenav-container {
   color: aliceblue;
   background-color: #212529;
 }
 
-/* 
-   Need to use ::ng-deep to get access to angular material applied class...use !important to override the last laye of css being applied.
-   This will override the overflow property to get rid of the double scroll bars...while still allowing for one
-*/
+/* Sidebar Profile Section */
+.sidenav {
+  width: 350px;
+  padding: 20px;
+}
+
+.profile-section {
+  display: flex;
+  align-items: center;
+}
+
+.profile-icon {
+  margin-right: 8px;
+  margin-bottom: 16px;
+}
+
+/* Tabs Styling */
+.tab-group ::ng-deep .mat-tab-label {
+  color: aliceblue;
+}
+
+.tab-group ::ng-deep .mat-tab-header-pagination {
+  display: none;
+}
+
+/* Overriding Angular Material Styles */
 ::ng-deep .mat-drawer-inner-container {
   overflow: visible !important;
 }
 
-/* 
-   If i want to get rid of both scroll bars comment this css in and the above css out
-*/
-/* .mat-drawer-inner-container::-webkit-scrollbar {
-  display: none;
-} */
-
-.profile-icon {
-  padding-bottom: 5px;
-}
-
-.social-sidenav-tab-group ::ng-deep .mat-tab-label {
-  color: aliceblue;
-}
-
-.social-sidenav-no-pagination ::ng-deep .mat-tab-header-pagination {
-  display: none;
-}
-
-/* REMOVE LATER */
-.main-div {
+/* Main Content */
+.main-content {
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   background-image: url('/assets/home.png');
+}
+
+.mat-drawer {
+  background-color: var(--dark);
 }
