--- a/angular-client/src/app/components/social-friends-list/social-friends-list.component.css
+++ b/angular-client/src/app/components/social-friends-list/social-friends-list.component.css
@@ -1,19 +1,10 @@
 table {
-  width: 100%;
   background-color: #212529;
 }
 
-.mat-cell {
-  color: aliceblue;
-}
-
-/* get rid of padding left for the table */
-th.mat-header-cell:first-of-type,
-td.mat-cell:first-of-type,
-td.mat-footer-cell:first-of-type,
-td.mat-cell:last-of-type {
-  padding-left: 0px;
-  padding-right: 0px;
+.mdc-data-table__cell,
+.mdc-data-table__header-cell {
+  padding: 0;
 }
 
 .right-justify {
