--- a/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
+++ b/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
@@ -1,19 +1,20 @@
-<mat-drawer-container class="example-container" autosize>
-  <mat-drawer #drawer class="example-sidenav" mode="over">
-    <h1>
+<mat-drawer-container class="sidenav-container" autosize>
+  <mat-drawer #drawer class="sidenav">
+    <!-- Profile Section -->
+    <div class="profile-section">
       <span
-        style="margin-right: 8px"
         routerLink="/user-profile"
         matTooltip="Go to User Profile"
         class="material-icons profile-icon"
         >account_circle</span
       >
-      <span *ngIf="user$ | async as user">{{ user.username }}</span>
-    </h1>
+      <h1 *ngIf="user$ | async as user">{{ user.username }}</h1>
+    </div>
     <mat-divider></mat-divider>
 
+    <!-- Tabs -->
     <mat-tab-group
-      class="social-sidenav-tab-group social-sidenav-no-pagination"
+      class="tab-group"
       (selectedIndexChange)="onTabChanged($event)">
       <mat-tab>
         <ng-template mat-tab-label>
@@ -21,8 +22,7 @@
           <ng-container *ngIf="combinedNotifications$ | async as combinedNotif">
             <app-notification-badge
               *ngIf="combinedNotif.hasData && activeTabIndex !== 0"
-              [count]="combinedNotif.count">
-            </app-notification-badge>
+              [count]="combinedNotif.count"></app-notification-badge>
           </ng-container>
         </ng-template>
         <app-social-friends-tab
@@ -38,6 +38,7 @@
       </mat-tab>
     </mat-tab-group>
   </mat-drawer>
-  <!-- <app-home [self]="self" [selfJWT]="selfJWT"></app-home> -->
-  <div class="main-div">Hello World</div>
+
+  <!-- Main Content Area -->
+  <div class="main-content">Hello World</div>
 </mat-drawer-container>
