--- a/angular-client/src/app/components/user-profile/user-profile.component.html
+++ b/angular-client/src/app/components/user-profile/user-profile.component.html
@@ -6,7 +6,10 @@
       <mat-card-subtitle>Need to update your user profile?</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
-      <form class="user-profile-form" (ngSubmit)="update()">
+      <form
+        class="user-profile-form"
+        #userProfileForm="ngForm"
+        (ngSubmit)="userProfileForm.valid && update()">
         <mat-form-field class="user-profile-full-width">
           <mat-label>First Name</mat-label>
           <input matInput [(ngModel)]="user.firstName" name="firstName" />
@@ -21,7 +24,12 @@
         </mat-form-field>
         <mat-form-field class="user-profile-full-width">
           <mat-label>Email</mat-label>
-          <input matInput [(ngModel)]="user.email" type="email" name="email" />
+          <input
+            required
+            matInput
+            [(ngModel)]="user.email"
+            type="email"
+            name="email" />
         </mat-form-field>
         <mat-form-field class="user-profile-full-width">
           <mat-label>Role</mat-label>
@@ -29,11 +37,16 @@
         </mat-form-field>
         <mat-form-field class="user-profile-full-width">
           <mat-label>username</mat-label>
-          <input matInput [(ngModel)]="user.username" name="username" />
+          <input
+            required
+            matInput
+            [(ngModel)]="user.username"
+            name="username" />
         </mat-form-field>
         <mat-form-field class="user-profile-full-width">
           <mat-label>password</mat-label>
           <input
+            required
             matInput
             [(ngModel)]="user.password"
             type="password"
