Move social stuff

--- a/angular-client/src/app/components/social/chat-cell/chat-cell.component.html
+++ b/angular-client/src/app/components/social/chat-cell/chat-cell.component.html
@@ -22,8 +22,8 @@
         [count]="unviewedMessages.length"></app-notification-badge>
     </mat-panel-description>
   </mat-expansion-panel-header>
-  <app-social-chat-box
+  <app-chat-box
     [panelOpenState]="panelOpenState"
     [friend]="friend"
-    [messages]="messages"></app-social-chat-box>
+    [messages]="messages"></app-chat-box>
 </mat-expansion-panel>
