--- a/angular-client/src/app/components/social/chat-cell/chat-cell.component.css
+++ b/angular-client/src/app/components/social/chat-cell/chat-cell.component.css
@@ -1,6 +1,5 @@
 .mat-expansion-panel {
-  background-color: #212529;
-  color: aliceblue;
+  background-color: var(--dark);
 }
 
 .mat-expansion-panel-header {
@@ -13,12 +12,7 @@
 }
 
 ::ng-deep .mat-expansion-panel-body {
-  padding: 0px !important;
-  padding-bottom: 0px !important;
-}
-
-::ng-deep .mat-expansion-indicator:after {
-  color: rgba(255, 255, 255, 0.5);
+  padding: 0px;
 }
 
 ::ng-deep .material-icons.online,
