--- a/angular-client/src/app/components/social/friends-list/friends-list.component.css
+++ b/angular-client/src/app/components/social/friends-list/friends-list.component.css
@@ -1,5 +1,5 @@
 table {
-  background-color: #212529;
+  background-color: var(--dark);
 }
 
 .mdc-data-table__cell,
@@ -16,8 +16,7 @@ table {
 }
 
 .mat-expansion-panel {
-  background-color: #212529;
-  color: aliceblue;
+  background-color: var(--dark);
 }
 
 .mat-expansion-panel-header {
@@ -27,13 +26,4 @@ table {
 
 .mat-expansion-panel-header-description {
   flex-grow: 0;
-}
-
-::ng-deep .mat-expansion-panel-body {
-  padding: 0px !important;
-  padding-bottom: 7px !important;
-}
-
-::ng-deep .mat-expansion-indicator:after {
-  color: rgba(255, 255, 255, 0.5);
 }
