--- a/angular-client/src/app/components/social/friends-list/friends-list.component.html
+++ b/angular-client/src/app/components/social/friends-list/friends-list.component.html
@@ -19,7 +19,7 @@
     class="mat-elevation-z0">
     <ng-container matColumnDef="username">
       <td mat-cell *matCellDef="let element; let i = index" cdkDrag>
-        <app-social-cell [friend]="friends.filteredData[i]"></app-social-cell>
+        <app-chat-cell [friend]="friends.filteredData[i]"></app-chat-cell>
       </td>
     </ng-container>
     <tr mat-row *matRowDef="let row; columns: friendsDisplayedColumns"></tr>
