--- a/angular-client/src/app/components/social/inbound-friend-requests/inbound-friend-requests.component.html
+++ b/angular-client/src/app/components/social/inbound-friend-requests/inbound-friend-requests.component.html
@@ -2,23 +2,17 @@
   <mat-expansion-panel-header>
     <mat-panel-title>
       <h1>
-        <span [style]="titleColor">{{ title }}</span>
+        <span style="color: aliceblue">friend requests</span>
       </h1>
     </mat-panel-title>
     <mat-panel-description>
       <app-notification-badge
-        *ngIf="
-          isInboundFriendRequestsComponent() &&
-          friendRequests.data.length > 0 &&
-          !panelOpenState
-        "
+        *ngIf="friendRequests.data.length > 0 && !panelOpenState"
         [count]="friendRequests.data.length"></app-notification-badge>
     </mat-panel-description>
   </mat-expansion-panel-header>
-  <form
-    *ngIf="isInboundFriendRequestsComponent()"
-    (ngSubmit)="sendFriendRequest()">
-    <mat-form-field class="social-friend-requests-full-width">
+  <form (ngSubmit)="sendFriendRequest()">
+    <mat-form-field class="full-width">
       <mat-label>Send Friend Request</mat-label>
       <input matInput [(ngModel)]="potentialFriend" name="sendFriendRequest" />
     </mat-form-field>
@@ -33,36 +27,23 @@
   <table mat-table [dataSource]="friendRequests" class="mat-elevation-z0">
     <ng-container matColumnDef="username">
       <td mat-cell *matCellDef="let element">
-        {{
-          isInboundFriendRequestsComponent()
-            ? element.from.username
-            : element.to.username
-        }}
+        {{ element.from.username }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="action">
       <td class="right-justify" mat-cell *matCellDef="let element">
         <span
-          *ngIf="isInboundFriendRequestsComponent()"
           matTooltip="Reject Friend Request"
           (click)="rejectFriendRequest(element)"
           class="material-icons-outlined"
           >person_remove</span
         >
         <span
-          *ngIf="isInboundFriendRequestsComponent()"
           matTooltip="Accept Friend Request"
           (click)="addNewFriend(element)"
           class="material-icons-outlined"
           >person_add_alt</span
-        >
-        <span
-          *ngIf="!isInboundFriendRequestsComponent()"
-          matTooltip="Revoke Friend Request"
-          (click)="revokeFriendRequest(element)"
-          class="material-icons"
-          >close</span
         >
       </td>
     </ng-container>
