--- a/angular-client/src/app/components/social/create-group/create-group.component.css
+++ b/angular-client/src/app/components/social/create-group/create-group.component.css
@@ -1,7 +1,3 @@
-.social-groups-list {
-  padding-top: 10px;
-}
-
 .mat-expansion-panel {
   background-color: #212529;
   color: aliceblue;
@@ -25,6 +21,15 @@
   color: rgba(255, 255, 255, 0.5);
 }
 
-.social-friends-full-width {
+.create-group-form {
+  min-width: 150px;
   width: 100%;
+}
+
+.create-group-full-width {
+  width: 100%;
+}
+
+.create-group-hint {
+  color: aliceblue;
 }
