--- a/angular-client/src/app/components/social/groups-list/groups-list.component.css
+++ b/angular-client/src/app/components/social/groups-list/groups-list.component.css
@@ -1,3 +1,7 @@
+.groups-list {
+  padding-top: 10px;
+}
+
 .mat-expansion-panel {
   background-color: #212529;
   color: aliceblue;
@@ -21,15 +25,6 @@
   color: rgba(255, 255, 255, 0.5);
 }
 
-.social-create-group-form {
-  min-width: 150px;
+.full-width {
   width: 100%;
-}
-
-.social-create-group-full-width {
-  width: 100%;
-}
-
-.social-create-group-hint {
-  color: aliceblue;
 }
