--- a/angular-client/src/app/components/social/create-group/create-group.component.css
+++ b/angular-client/src/app/components/social/create-group/create-group.component.css
@@ -1,6 +1,5 @@
 .mat-expansion-panel {
-  background-color: #212529;
-  color: aliceblue;
+  background-color: var(--dark);
 }
 
 .mat-expansion-panel-header {
