--- a/angular-client/src/app/components/auth/login/login.component.html
+++ b/angular-client/src/app/components/auth/login/login.component.html
@@ -20,8 +20,19 @@
             type="password"
             name="password" />
         </mat-form-field>
-        <button mat-raised-button color="primary" type="submit">Login</button>
-        or <a routerLink="/auth/signup">Sign Up</a>
+        <button
+          class="login-button"
+          mat-raised-button
+          color="primary"
+          type="submit">
+          Login
+        </button>
+        <button
+          class="signup-button"
+          mat-raised-button
+          routerLink="/auth/signup">
+          Signup
+        </button>
       </form>
     </mat-card-content>
   </mat-card>
