--- a/angular-client/src/app/components/auth/signup/signup.component.css
+++ b/angular-client/src/app/components/auth/signup/signup.component.css
@@ -24,3 +24,12 @@
   align-items: center;
   background-image: url('/assets/home.png');
 }
+
+.login-button {
+  width: 100%;
+}
+
+.signup-button {
+  width: 100%;
+  margin-bottom: 16px;
+}
