--- a/angular-client/src/app/components/auth/login/login.component.css
+++ b/angular-client/src/app/components/auth/login/login.component.css
@@ -3,7 +3,7 @@
 }
 
 .login-header-image {
-  background-image: url('/assets/wick.png');
+  background-image: url('/assets/qwicki-coin.png');
   background-size: cover;
 }
 
