--- a/angular-client/src/app/components/social/chat-box/chat-box.component.css
+++ b/angular-client/src/app/components/social/chat-box/chat-box.component.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  width: 294px;
+  width: 100%;
   background: var(--dark);
   color: var(--title-text-color);
   padding: 5px;
@@ -48,6 +48,7 @@
 .message-content {
   white-space: pre-wrap;
   word-wrap: break-word;
+  max-width: 230px;
 }
 
 .input-field {
