--- a/angular-client/src/app/components/auth/login/login.component.html
+++ b/angular-client/src/app/components/auth/login/login.component.html
@@ -5,7 +5,7 @@
       <mat-card-title>Login</mat-card-title>
       <mat-card-subtitle>Wanna play a qwicki?</mat-card-subtitle>
     </mat-card-header>
-    <img mat-card-image src="/assets/qwicki-transparent.png" alt="Wick logo" />
+    <img mat-card-image src="/assets/qwicki-text.png" alt="Wick logo" />
     <mat-card-content>
       <form class="login-form" (ngSubmit)="login()">
         <mat-form-field class="login-full-width">
