--- a/angular-client/src/app/components/layout/main-layout/main-layout.component.html
+++ b/angular-client/src/app/components/layout/main-layout/main-layout.component.html
@@ -3,7 +3,9 @@
     <app-social-sidenav></app-social-sidenav>
   </mat-sidenav>
 
-  <mat-sidenav-content class="content"> center </mat-sidenav-content>
+  <mat-sidenav-content class="content">
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
 
   <mat-sidenav
     position="end"
