--- a/angular-client/src/app/components/auth/signup/signup.component.css
+++ b/angular-client/src/app/components/auth/signup/signup.component.css
@@ -22,7 +22,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url('/assets/home.png');
+  background-image: url('/assets/qwicki-background.png');
 }
 
 .login-button {
