Create dedicated is-typing component that can be reused

--- a/angular-client/src/app/components/social/chat-box/chat-box.component.html
+++ b/angular-client/src/app/components/social/chat-box/chat-box.component.html
@@ -17,7 +17,9 @@
       </div>
     </ng-container>
     <div class="is-typing">
-      <span *ngIf="friend.isTyping">{{ friend.username }} is typing...</span>
+      <app-is-typing
+        *ngIf="friend.isTyping"
+        [username]="friend.username"></app-is-typing>
     </div>
   </div>
   <div class="input-area">
