Frontend non state stuff for online/offline/away status

--- a/angular-client/src/app/components/social/chat-cell/chat-cell.component.css
+++ b/angular-client/src/app/components/social/chat-cell/chat-cell.component.css
@@ -15,18 +15,6 @@
   padding: 0px;
 }
 
-::ng-deep .material-icons.online,
-.material-icons-outlined {
-  vertical-align: middle;
-  color: #3cb371;
-  font-size: 12px;
-  padding-right: 4px;
-}
-
-::ng-deep .material-icons.offline,
-.material-icons-outlined {
-  vertical-align: middle;
-  color: #cd5c5c;
-  font-size: 12px;
-  padding-right: 4px;
+.online-status {
+  margin-right: 4px;
 }
