Refactor to use onlineStatus

--- a/angular-client/src/app/components/social/chat-cell/chat-cell.component.html
+++ b/angular-client/src/app/components/social/chat-cell/chat-cell.component.html
@@ -10,7 +10,7 @@
       [style]="panelOpenState ? 'color:#7b1fa2' : 'color:aliceblue'">
       <app-online-status
         class="online-status"
-        [status]="friend.online ? 'online' : 'offline'"></app-online-status>
+        [status]="friend.onlineStatus"></app-online-status>
       {{ friend.username }}
     </mat-panel-title>
     <mat-panel-description>
