--- a/angular-client/src/app/components/social/social-sidenav/social-sidenav.component.html
+++ b/angular-client/src/app/components/social/social-sidenav/social-sidenav.component.html
@@ -11,7 +11,7 @@
       class="online-status"
       [size]="15"
       [readOnly]="false"
-      [status]="user.online ? 'online' : 'offline'"></app-online-status>
+      [status]="user.onlineStatus"></app-online-status>
   </ng-container>
 </div>
 <mat-divider></mat-divider>
