Online presence almost working except for setting proper online status of friends upon joining their rooms and sorting

--- a/angular-client/src/app/components/social/chat-cell/chat-cell.component.css
+++ b/angular-client/src/app/components/social/chat-cell/chat-cell.component.css
@@ -11,7 +11,7 @@
   flex-grow: 0;
 }
 
-::ng-deep .mat-expansion-panel-body {
+::ng-deep .padding-0 .mat-expansion-panel-body {
   padding: 0px;
 }
 
