--- a/angular-client/src/app/components/social/chat-cell/chat-cell.component.html
+++ b/angular-client/src/app/components/social/chat-cell/chat-cell.component.html
@@ -1,7 +1,7 @@
 <mat-expansion-panel
   (opened)="onPanelOpen()"
   (closed)="onPanelClose()"
-  class="mat-elevation-z0"
+  class="mat-elevation-z0 padding-0"
   appBorder
   [bStyle]="panelOpenState ? 'solid' : 'hidden'"
   [bPadding]="panelOpenState ? 5 : 0">
