--- a/angular-client/src/app/components/social/inbound-friend-requests/inbound-friend-requests.component.html
+++ b/angular-client/src/app/components/social/inbound-friend-requests/inbound-friend-requests.component.html
@@ -1,4 +1,6 @@
-<mat-expansion-panel class="mat-elevation-z0" [(expanded)]="panelOpenState">
+<mat-expansion-panel
+  class="mat-elevation-z0 padding-0"
+  [(expanded)]="panelOpenState">
   <mat-expansion-panel-header>
     <mat-panel-title>
       <h1>
