Fix sort bug on messages

--- a/angular-client/src/app/components/social/chat-box/chat-box.component.html
+++ b/angular-client/src/app/components/social/chat-box/chat-box.component.html
@@ -1,6 +1,6 @@
 <div class="chat-box" (mousedown)="$event.stopPropagation()">
   <div class="message-area" #scrollable>
-    <ng-container *ngFor="let group of messages | keyvalue">
+    <ng-container *ngFor="let group of messages | keyvalue: keepOrder">
       <div class="date-header">{{ group.key | date: 'mediumDate' }}</div>
       <div *ngFor="let message of group.value" class="message-container">
         <div
