Search and friend requests logic combined into one input field to save screen real estate

--- a/angular-client/src/app/components/social/friends-tab/friends-tab.component.html
+++ b/angular-client/src/app/components/social/friends-tab/friends-tab.component.html
@@ -1,8 +1,20 @@
 <div class="friends-tab">
-  <form>
+  <form (ngSubmit)="sendFriendRequest()">
     <mat-form-field class="full-width">
-      <mat-label>Search</mat-label>
-      <input matInput (keyup)="filter($event)" name="filter" />
+      <mat-label>Search/Add Friends</mat-label>
+      <input
+        matInput
+        (keyup)="filter()"
+        [(ngModel)]="potentialFriend"
+        name="search" />
+      <span
+        *ngIf="potentialFriend"
+        matSuffix
+        matTooltip="Search/Add Friends"
+        (click)="sendFriendRequest()"
+        class="material-icons"
+        >send</span
+      >
     </mat-form-field>
   </form>
   <app-inbound-friend-requests
