Update inbound friend requests component to be inbound notifications

--- a/angular-client/src/app/components/social/inbound-notifications/inbound-notifications.component.html
+++ b/angular-client/src/app/components/social/inbound-notifications/inbound-notifications.component.html
@@ -4,7 +4,7 @@
   <mat-expansion-panel-header>
     <mat-panel-title>
       <h1>
-        <span style="color: aliceblue">friend requests</span>
+        <span style="color: aliceblue">notifications</span>
       </h1>
     </mat-panel-title>
     <mat-panel-description>
